<resources>
    <string name="app_name">MyBank</string>
    <string name="email_txt">Enter Email</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login_btn">Log In</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="logo_desc">The Bank of choice</string>
    <string name="pass_hint">Enter Password</string>
</resources>
